--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.idiotas.wheretoeat"
+        applicationId "com.luckcheese.wheretoeat"
         minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
